--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
-    "node-sass": "^4.13.1"
+    "gulp-imagemin": "^7.1.0",
+    "node-sass": "^4.13.1",
+    "browser-sync": "^2.26.7",
+    "del": "^5.1.0"
   }
 }
